--- a/PKExitToMap/PKExitToMap/PKExitToMap/PKExitToMap.csproj
+++ b/PKExitToMap/PKExitToMap/PKExitToMap/PKExitToMap.csproj
@@ -34,10 +34,8 @@
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="0Harmony-1.2">
-      <HintPath>E:\steam\SteamApps\common\Pathfinder Kingmaker\Kingmaker_Data\Managed\UnityModManager\0Harmony-1.2.dll</HintPath>
-    </Reference>
-    <Reference Include="0Harmony12">
+    <Reference Include="0Harmony12, Version=1.2.0.1, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>E:\steam\SteamApps\common\Pathfinder Kingmaker\Kingmaker_Data\Managed\UnityModManager\0Harmony12.dll</HintPath>
     </Reference>
     <Reference Include="Assembly-CSharp">
